syntax = "proto3";

package order_service;

// Order entity
message Order {
  uint32 id = 1;
  uint32 user_id = 2;
  uint32 product_id = 3;
  uint32 quantity = 4;
  double total = 5;
}

// Get order request
message GetOrderRequest {
  uint32 order_id = 1;
}

// Get order response
message GetOrderResponse {
  Order order = 1;
}

// Create order request
message CreateOrderRequest {
  uint32 id = 1;
  uint32 user_id = 2;
  uint32 product_id = 3;
  uint32 quantity = 4;
  double total = 5;
}

// Create order response
message CreateOrderResponse {
  Order order = 1;
}

// Order service
service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}